# xdm1041-gui

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
cmake/: W32InstallDirs.cmake
include/: MonitorWidget.h  xdm1041.h
repl/: README.md  repl.py
res/: app.rc
src/: MonitorWidget.cpp  MonitorWidget.ui  main.cpp  xdm1041.cpp
